gen/ListLanguageParser.py
# Generated from C:/University/6_sem/YAPIS/grammar\ListLanguage_exceptions.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ListLanguageParser ( Parser ):

    grammarFileName = "ListLanguage_exceptions.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'input'", "'print'", "'range'", "'def'", 
                     "'for'", "'while'", "'in'", "'if'", "'else'", "'elif'", 
                     "'get'", "'pop'", "'append'", "'remove'", "'clear'", 
                     "'return'", "':'", "'.'", "','", "'\"'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'**'", "'<'", "'>'", "'=='", "'>='", "'<='", 
                     "'<>'", "'!='" ]

    symbolicNames = [ "<INVALID>", "INPUT", "PRINT", "RANGE", "DEF", "FOR", 
                      "WHILE", "IN", "IF", "ELSE", "ELIF", "GET", "POP", 
                      "APPEND", "REMOVE", "CLEAR", "RETURN", "TWO_POINT", 
                      "POINT_FOR_M", "COMMA", "OPEN_CLOSE_EL", "OPEN_PAREN", 
                      "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", 
                      "CLOSE_BRACE", "ASSIGN", "ADD", "MINUS", "MUL", "DIV", 
                      "POW", "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", 
                      "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "ID", "NUM", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_assign_element = 3
    RULE_operations = 4
    RULE_get_element = 5
    RULE_queue_init = 6
    RULE_list_init = 7
    RULE_elem_init = 8
    RULE_tree = 9
    RULE_if_block = 10
    RULE_if_init = 11
    RULE_else = 12
    RULE_elif = 13
    RULE_compare = 14
    RULE_for_block = 15
    RULE_for_init = 16
    RULE_while_block = 17
    RULE_while_init = 18
    RULE_sub_program = 19
    RULE_sub_program_call = 20
    RULE_print = 21
    RULE_range = 22
    RULE_input = 23
    RULE_return_def = 24
    RULE_method = 25
    RULE_methods = 26
    RULE_variables = 27
    RULE_variables_and_num = 28
    RULE_type = 29
    RULE_operation_list = 30

    ruleNames =  [ "program", "block", "statement", "assign_element", "operations", 
                   "get_element", "queue_init", "list_init", "elem_init", 
                   "tree", "if_block", "if_init", "else", "elif", "compare", 
                   "for_block", "for_init", "while_block", "while_init", 
                   "sub_program", "sub_program_call", "print", "range", 
                   "input", "return_def", "method", "methods", "variables", 
                   "variables_and_num", "type", "operation_list" ]

    EOF = Token.EOF
    INPUT=1
    PRINT=2
    RANGE=3
    DEF=4
    FOR=5
    WHILE=6
    IN=7
    IF=8
    ELSE=9
    ELIF=10
    GET=11
    POP=12
    APPEND=13
    REMOVE=14
    CLEAR=15
    RETURN=16
    TWO_POINT=17
    POINT_FOR_M=18
    COMMA=19
    OPEN_CLOSE_EL=20
    OPEN_PAREN=21
    CLOSE_PAREN=22
    OPEN_BRACK=23
    CLOSE_BRACK=24
    OPEN_BRACE=25
    CLOSE_BRACE=26
    ASSIGN=27
    ADD=28
    MINUS=29
    MUL=30
    DIV=31
    POW=32
    LESS_THAN=33
    GREATER_THAN=34
    EQUALS=35
    GT_EQ=36
    LT_EQ=37
    NOT_EQ_1=38
    NOT_EQ_2=39
    ID=40
    NUM=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sub_program(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Sub_programContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Sub_programContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return ListLanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ListLanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 62
                self.sub_program()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3298534949230) != 0):
                self.state = 68
                self.statement()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return ListLanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ListLanguageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 74
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 77 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_element(self):
            return self.getTypedRuleContext(ListLanguageParser.Assign_elementContext,0)


        def print_(self):
            return self.getTypedRuleContext(ListLanguageParser.PrintContext,0)


        def if_block(self):
            return self.getTypedRuleContext(ListLanguageParser.If_blockContext,0)


        def sub_program_call(self):
            return self.getTypedRuleContext(ListLanguageParser.Sub_program_callContext,0)


        def for_block(self):
            return self.getTypedRuleContext(ListLanguageParser.For_blockContext,0)


        def return_def(self):
            return self.getTypedRuleContext(ListLanguageParser.Return_defContext,0)


        def range_(self):
            return self.getTypedRuleContext(ListLanguageParser.RangeContext,0)


        def while_block(self):
            return self.getTypedRuleContext(ListLanguageParser.While_blockContext,0)


        def input_(self):
            return self.getTypedRuleContext(ListLanguageParser.InputContext,0)


        def method(self):
            return self.getTypedRuleContext(ListLanguageParser.MethodContext,0)


        def getRuleIndex(self):
            return ListLanguageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ListLanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.assign_element()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.print_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.if_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.sub_program_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.for_block()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.return_def()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.range_()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.while_block()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.input_()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 88
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ListLanguageParser.ASSIGN, 0)

        def get_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Get_elementContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Get_elementContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.ID)
            else:
                return self.getToken(ListLanguageParser.ID, i)

        def list_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.List_initContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.List_initContext,i)


        def elem_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Elem_initContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Elem_initContext,i)


        def queue_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Queue_initContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Queue_initContext,i)


        def tree(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.TreeContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.TreeContext,i)


        def operations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.OperationsContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.OperationsContext,i)


        def input_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.InputContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.InputContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.MethodContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.MethodContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.COMMA)
            else:
                return self.getToken(ListLanguageParser.COMMA, i)

        def getRuleIndex(self):
            return ListLanguageParser.RULE_assign_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_element" ):
                listener.enterAssign_element(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_element" ):
                listener.exitAssign_element(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_element" ):
                return visitor.visitAssign_element(self)
            else:
                return visitor.visitChildren(self)




    def assign_element(self):

        localctx = ListLanguageParser.Assign_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 91
                    self.get_element()
                    pass

                elif la_ == 2:
                    self.state = 92
                    self.match(ListLanguageParser.ID)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==19:
                        self.state = 93
                        self.match(ListLanguageParser.COMMA)


                    pass


                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==40):
                    break

            self.state = 100
            self.match(ListLanguageParser.ASSIGN)
            self.state = 113 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 113
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        self.state = 101
                        self.list_init()
                        pass

                    elif la_ == 2:
                        self.state = 102
                        self.elem_init()
                        pass

                    elif la_ == 3:
                        self.state = 103
                        self.queue_init()
                        pass

                    elif la_ == 4:
                        self.state = 104
                        self.tree()
                        pass

                    elif la_ == 5:
                        self.state = 105
                        self.operations()
                        pass

                    elif la_ == 6:
                        self.state = 106
                        self.input_()
                        pass

                    elif la_ == 7:
                        self.state = 107
                        self.get_element()
                        pass

                    elif la_ == 8:
                        self.state = 108
                        self.method()
                        pass

                    elif la_ == 9:
                        self.state = 109
                        self.match(ListLanguageParser.ID)
                        self.state = 111
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==19:
                            self.state = 110
                            self.match(ListLanguageParser.COMMA)


                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 115 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.OPEN_PAREN)
            else:
                return self.getToken(ListLanguageParser.OPEN_PAREN, i)

        def variables_and_num(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Variables_and_numContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Variables_and_numContext,i)


        def operation_list(self):
            return self.getTypedRuleContext(ListLanguageParser.Operation_listContext,0)


        def CLOSE_PAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.CLOSE_PAREN)
            else:
                return self.getToken(ListLanguageParser.CLOSE_PAREN, i)

        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.ADD)
            else:
                return self.getToken(ListLanguageParser.ADD, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.MINUS)
            else:
                return self.getToken(ListLanguageParser.MINUS, i)

        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.MUL)
            else:
                return self.getToken(ListLanguageParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.DIV)
            else:
                return self.getToken(ListLanguageParser.DIV, i)

        def getRuleIndex(self):
            return ListLanguageParser.RULE_operations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperations" ):
                listener.enterOperations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperations" ):
                listener.exitOperations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperations" ):
                return visitor.visitOperations(self)
            else:
                return visitor.visitChildren(self)




    def operations(self):

        localctx = ListLanguageParser.OperationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 117
                self.match(ListLanguageParser.OPEN_PAREN)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 123
                    self.variables_and_num()
                    self.state = 125
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        self.state = 124
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4026531840) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()



                else:
                    raise NoViableAltException(self)
                self.state = 129 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8321499136) != 0):
                self.state = 131
                self.operation_list()


            self.state = 137
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 134
                    self.match(ListLanguageParser.CLOSE_PAREN) 
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Get_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ListLanguageParser.ID, 0)

        def OPEN_BRACK(self):
            return self.getToken(ListLanguageParser.OPEN_BRACK, 0)

        def CLOSE_BRACK(self):
            return self.getToken(ListLanguageParser.CLOSE_BRACK, 0)

        def variables_and_num(self):
            return self.getTypedRuleContext(ListLanguageParser.Variables_and_numContext,0)


        def get_element(self):
            return self.getTypedRuleContext(ListLanguageParser.Get_elementContext,0)


        def getRuleIndex(self):
            return ListLanguageParser.RULE_get_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_element" ):
                listener.enterGet_element(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_element" ):
                listener.exitGet_element(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_element" ):
                return visitor.visitGet_element(self)
            else:
                return visitor.visitChildren(self)




    def get_element(self):

        localctx = ListLanguageParser.Get_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_get_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(ListLanguageParser.ID)
            self.state = 141
            self.match(ListLanguageParser.OPEN_BRACK)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 142
                self.variables_and_num()
                pass

            elif la_ == 2:
                self.state = 143
                self.get_element()
                pass


            self.state = 146
            self.match(ListLanguageParser.CLOSE_BRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Queue_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(ListLanguageParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(ListLanguageParser.CLOSE_PAREN, 0)

        def elem_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Elem_initContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Elem_initContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.COMMA)
            else:
                return self.getToken(ListLanguageParser.COMMA, i)

        def getRuleIndex(self):
            return ListLanguageParser.RULE_queue_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueue_init" ):
                listener.enterQueue_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueue_init" ):
                listener.exitQueue_init(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueue_init" ):
                return visitor.visitQueue_init(self)
            else:
                return visitor.visitChildren(self)




    def queue_init(self):

        localctx = ListLanguageParser.Queue_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_queue_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ListLanguageParser.OPEN_PAREN)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40 or _la==41:
                self.state = 149
                self.elem_init()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 150
                    self.match(ListLanguageParser.COMMA)


                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(ListLanguageParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACK(self):
            return self.getToken(ListLanguageParser.OPEN_BRACK, 0)

        def CLOSE_BRACK(self):
            return self.getToken(ListLanguageParser.CLOSE_BRACK, 0)

        def elem_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Elem_initContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Elem_initContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ListLanguageParser.COMMA)
            else:
                return self.getToken(ListLanguageParser.COMMA, i)

        def getRuleIndex(self):
            return ListLanguageParser.RULE_list_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_init" ):
                listener.enterList_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_init" ):
                listener.exitList_init(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_init" ):
                return visitor.visitList_init(self)
            else:
                return visitor.visitChildren(self)




    def list_init(self):

        localctx = ListLanguageParser.List_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(ListLanguageParser.OPEN_BRACK)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40 or _la==41:
                self.state = 161
                self.elem_init()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 162
                    self.match(ListLanguageParser.COMMA)


                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170
            self.match(ListLanguageParser.CLOSE_BRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elem_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ListLanguageParser.TypeContext,0)


        def getRuleIndex(self):
            return ListLanguageParser.RULE_elem_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem_init" ):
                listener.enterElem_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem_init" ):
                listener.exitElem_init(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElem_init" ):
                return visitor.visitElem_init(self)
            else:
                return visitor.visitChildren(self)




    def elem_init(self):

        localctx = ListLanguageParser.Elem_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elem_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACK(self):
            return self.getToken(ListLanguageParser.OPEN_BRACK, 0)

        def CLOSE_BRACK(self):
            return self.getToken(ListLanguageParser.CLOSE_BRACK, 0)

        def elem_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLanguageParser.Elem_initContext)
            else:
                return self.getTypedRuleContext(ListLanguageParser.Elem_initContext,i)

